framec_tests/language_specific/c/v3_outline/positive/basic_outline.frm
@target c

system S {
    actions:
        doIt() {
            // native body
        }
}
