framec_tests/language_specific/c/v3_outline/negative/handler_outside_state.frm
@target c

system S {
    machine:
        e() {
            => $^
        }
}

